<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="714dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/pick_a_workout"
            android:textAlignment="center"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/ArmsButton"
            android:layout_width="320dp"
            android:layout_height="107dp"
            android:text="@string/arms" />

        <Button
            android:id="@+id/LegsButton"
            android:layout_width="320dp"
            android:layout_height="105dp"
            android:text="@string/legs" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>