<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Team Symphony 12/2/22, 7:23 PM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 12/2/22, 4:24 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".ui.WorkoutRoutineActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/routineNameEditText"
            android:layout_width="221dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/label_routine_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/workoutDescriptionEditText"
            android:layout_width="221dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/workout_description"
            android:inputType="textPersonName" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/workoutListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <GridLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/startWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_start_workout" />

        <Button
            android:id="@+id/newExerciseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_add_exercise" />

        <Button
            android:id="@+id/saveWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_save_routine" />

        <Button
            android:id="@+id/deleteWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_delete_routine" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>